2005-07-26  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/configure.in: Check for a $prefix/share
	directory and add it the the package if found.
	This will check for Tcl packages in /usr/local/share
	when Tcl is configured with the default dist install.
	[patch 1231015]

2005-07-26  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclBasic.c (Tcl_CallWhenDeleted):     Converted to use
        per-thread counter, rather than a process global one that required
        mutex protection.  [RFE 1077194]

        * generic/tclNamesp.c (TclTeardownNamespace):   Re-ordering so that
        * tests/trace.test (trace-34.4):        command delete traces fire
        while the command still exists.  [Bug 1047286]

2005-07-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/tcl.m4 (SC_PROG_TCLSH, SC_BUILD_TCLSH):
	* win/configure: Regen.
	* win/tcl.m4 (SC_PROG_TCLSH, SC_BUILD_TCLSH):
	Split confused search for tclsh on PATH and
	build and install locations into two macros.
	SC_PROG_TCLSH searches just the PATH.
	SC_BUILD_TCLSH determines the name of the tclsh
	executable in the Tcl build directory.
	[Tcl bug 1160114]
	[Tcl patch 1244153]

2005-07-23  Don Porter  <dgp@users.sourceforge.net>

	* library/auto.tcl:	Updates to the Tcl script library to make
	* library/history.tcl:	use of Tcl 8.4 features.  Forward port of
	* library/init.tcl:	appropriate portions of [Patch 1237755].
	* library/package.tcl:
	* library/safe.tcl:
	* library/word.tcl:

2005-07-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/string.test: Add string is tests for
	functionality that was not tested.
	* win/README: Update msys + mingw URL.
	Remove old Cygwin + mingw info.

2005-07-23  Miguel Sofer <msofer@users.sf.net>

	* generic/tclExecute.c (INST_DICT_*): stop 2 compiler
	warnings for uninitialised variables. 

2005-07-23  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclExecute.c (TEBC:INST_DICT_INCR_IMM): Fix the