@@ -1,3 +1,9 @@
+2005-07-27  Don Porter  <dgp@users.sourceforge.net>
+
+	* library/init.tcl ([unknown]):	Corrected return code handling
+	in the portions of [unknown] that expand incomplete commands
+	during interactive operations.  [Bug 1214462].
+
 2005-07-26  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* unix/configure: Regen.
